--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.dylib
 
 # Test binary, built with `go test -c`
-*.test
+#*.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
@@ -22,4 +22,4 @@ go.work
 go.work.sum
 
 # env file
-.env
+#.env
